# Indie-Studio

./: .gitignore  CMakeLists.txt  README.md  map.txt
Assets/AnimalsCharacters/: Cat.iqm  Fox.iqm  Gazelle.iqm  Owl.iqm  Pig.iqm  Pigeon.iqm  Toucan.iqm  Wolf.iqm
Assets/Level/: bomb.iqm  explosion.iqm  forest.mtl  leafs.mtl
Assets/Shaders/: bloom.fs
Documentation/: README.md  index.html
Includes/: Draw.hpp  Exception.hpp  Game.hpp  GameAI.hpp  GameBomb.hpp  GameButton.hpp  GameCamera.hpp  GameDrawMap.hpp  GameImage.hpp  GameObject.hpp  GameParticle.hpp  GamePlayer.hpp  GameScript.hpp  GameShaderMode.hpp  GameSound.hpp  GameText.hpp  Gamepad.hpp  IEntity.hpp  IObject.hpp  Keyboard.hpp  Logics.hpp  MainMenu.hpp  Map.hpp  Raylib.hpp  Scene.hpp  SceneManager.hpp  SettingsMenu.hpp  Window.hpp
Includes/Encapsulation/: Color.hpp  Draw.hpp  Load.hpp  Models.hpp  MyGamepad.hpp  Objects.hpp  Sound.hpp  Window.hpp
Src/: Exception.cpp  Game.cpp  GameObject.cpp  Gamepad.cpp  Keyboard.cpp  Logics.cpp  Main.cpp  MainMenu.cpp  Map.cpp  Scene.cpp  SettingsMenu.cpp
Src/Encapsulation/: Draw.cpp  Gamepad.cpp  Load.cpp  Models.cpp  Sound.cpp  Window.cpp  Window.hpp
Src/Entity/: GameAI.cpp  GameBomb.cpp  GameButton.cpp  GameCamera.cpp  GameDrawMap.cpp  GameImage.cpp  GameObject.cpp  GamePlayer.cpp  GameScript.cpp  GameShaderMode.cpp  GameSound.cpp  GameText.cpp
Src/Game/: Game.cpp  GameObject.cpp
Src/Scene/: Scene.cpp  SceneManager.cpp
cmake/: Findraylib.cmake
includes/: game.hpp  main.hpp  map.hpp
src/: game.cpp  main.cpp  map.cpp
